--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,7 +1,7 @@
 changeLogFile: src/main/script/changelog-master.xml
 driver: com.mysql.jdbc.Driver
-url: jdbc:mysql://192.168.99.100:33306/default?useSSL=false
-username: default
-password: default
+url: jdbc:mysql://192.168.0.15:3306/default?useSSL=false
+username: root
+password: Raviteja@26
 verbose: true
 dropFirst: false
